tests/snapshots/examples_fixtures/type_classes__user_function_shadows_class_method.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/user_function_shadows_class_method.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
