tests/snapshots/examples_fixtures/type_classes__where_constraint_multi_param.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_classes/where_constraint_multi_param.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
